--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
+    --laranja: #EB9B00;
+    --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
 }
 .body {
     background-color: var(--cor-de-fundo);
@@ -36,7 +38,23 @@
     display: none;
     position: absolute;
     top: 100%;
+    width: 60vw;
 }
 .container__botao:checked ~ .lista-menu {
     display: block;
+}
+.lista-menu_titulo, 
+.lista-menu_item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+.lista-menu__titulo {
+    color: var(--laranja);
+}
+.lista-menu__link {
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
 }
