--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(styles/header.css);
+@import url(style/header.css);
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -8,53 +8,4 @@
 }
 .body {
     background-color: var(--cor-de-fundo);
-}
-.h1{
-    background-color: white;
-}
-.cabeçalho__menu-hamburguer {
-    width: 24px;
-    height: 24px;
-    display: inline-block;
-    background-image: url("Menu.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.cabecalho{
-    background-color: var(--branco);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-}
-.container{
-    display: flex;
-    align-items: center;
-}
-.container__imagem{
-    padding: 1em;
-}
-.lista-menu{
-    display: none;
-    position: absolute;
-    top: 100%;
-    width: 60vw;
-}
-.container__botao:checked ~ .lista-menu {
-    display: block;
-}
-.lista-menu_titulo, 
-.lista-menu_item {
-    padding: 1em;
-    background-color: var(--branco);
-}
-.lista-menu__titulo {
-    color: var(--laranja);
-}
-.lista-menu__link {
-    background: var(--azul-degrade);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    text-transform: uppercase;
 }
